<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="25dp">


    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/country_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:text="@string/country_name" />

        <TextView
            android:id="@+id/slug_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textSize="12dp"
            tools:text="@string/capital_name" />

        <TextView
            android:id="@+id/country_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textSize="12dp"
            tools:text="@string/country_code" />
    </LinearLayout>

    <ImageView
        android:id="@+id/country_flag"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="20dp"
        android:layout_toEndOf="@+id/linear_layout"
        tools:src="@android:color/darker_gray" />

</RelativeLayout>