<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <ImageView
        android:id="@+id/flag_profilename"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/profile_pict" />

    <TextView
        android:id="@+id/country_profilename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/flag_profilename"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/developer_name"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/capital_profilename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/country_profilename"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/hobby"
        android:textSize="18sp"
        android:textStyle="italic" />

    <LinearLayout
        android:id="@+id/linear_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/capital_profilename">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="2500350"
                android:textColor="#D32F2F"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_case"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/linear_layout2"
        android:background="#512DA8" />

    <LinearLayout
        android:id="@+id/covid_statistic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="250"
                android:textColor="#E64A19"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Deaths"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#512DA8" />

        <LinearLayout
            android:id="@+id/linear_layout1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="250"
                android:textColor="#388E3C"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Recovered"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>


    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/covid_statistic"
        android:layout_marginTop="10dp"
        android:background="#512DA8" />


    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/covid_statistic"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="30dp"
        android:justificationMode="inter_word"
        android:padding="20dp"
        android:text="Updated @ 15 Desember 2019 Pukul 13.50"
        android:textAlignment="center"
        android:textSize="15sp" />


</RelativeLayout>